# csstmock-dev

./: Makefile  README.md  pyproject.toml
libcsstmock/: .compile_on_gravity.sh.swp  .io_jiutian_lightcone.f.swp  Makefile  compile_on_gravity.sh  compile_on_mac.sh  compile_on_macos14.sh  io_dummy.f  io_jiutian.f  io_jiutian_lightcone.f  isin_survey.f  my_plugin.c  mymodule.py  plugin.h
libcsstmock/.ipynb_checkpoints/: compile_on_gravity-checkpoint.sh  io_dummy-checkpoint.f  myfunc-checkpoint.py  mymodule-checkpoint.py  readme-checkpoint.md  test1-checkpoint.f  test3-checkpoint.f
libcsstmock/F2python/: .DESI_MGRS.o196374.swp  DESI_MGRS.e200932  DESI_MGRS.o196374  DESI_MGRS.o200932  a.out  assginL_cube.f  auxfile.f  call_python.fxx  common.inc  gaxML.f  gaxML.fold  generate.f  generate_cubic.f  geo3  geometry.f  getzv_max.f  initzbin.f  inputGLF.f  ioSP.f  io_9tian.f  io_DESI.fold  io_DESInew.f  io_DESIsv3.f  io_Guo.f  io_Millennium.f  make.check  make.ifort  make.lib  make.python  matchobs.f  parameters  parametersMill  parametersxx  rangeLM.f  readparameter.f  rotate.f  rotate8.f  start.f  subhalo_lightcone.f  subhalo_lightcone2.f  (+1 more)
libcsstmock/F2python/MF/: GLF.datLF  GLF.datLF19.0  GLF.datLF19.5  GMF.datLF  GMF_scatter.datLF
libcsstmock/F2python/libcsstmock/: build.py  (+10 more)
src/csstmock/: core.py
src/csstmock.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: _test_io_jiutian.py  test_asfunc.py  test_basic.py  test_io_jiutian.py
tests/test_libcsstmock/: _test_libcsstmock.py  test.sh  test0  test0.f  test2.f  test3  test3.f  test4  test4.f
(+61 files in other folders)
