# [build-system]
# requires = [
#    "setuptools>=60",
#    "setuptools-scm>=8.0"]


[project]
name    = "csstmock"
version = "1.0.0"
description='Construct mock catalog and apply foreground masks for CSST.'
authors = [{name = 'SJTU group'}, 
           {name = 'Yizhou Gu', email='guyizhou@sjtu.edu.cn'}] 
requires-python = ">=3.7"
dependencies = [
  "matplotlib",
  "numpy", 
  "astropy",
  "healpy",
  "h5py", 
  "pytest"
#  "basemap=1.3.6" 
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["*.npy"]
